# nagios-plugins

./: .gitignore  README-CHECKS.md  README.md  check_compose  check_compose.py  check_eap772  check_eap772.py  check_gmodem2  check_gmodem2.py  check_goss  check_goss.py  check_jetdirect  check_jetdirect.orig  check_kindle  check_kindle.py  check_lm_sensors  check_lm_sensors.py  check_lpr  check_lpr.py  check_p110  check_p110.py  check_smart  check_smart.py  check_space_usage  check_space_usage.py  install.sh  pyproject.toml
ansible-nagios-plugins-deploy/: README.md  inventory.ini  playbook.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/: README.md
ansible-nagios-plugins-deploy/deploy-nagios-checks/defaults/: main.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/handlers/: main.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/meta/: main.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/tasks/: main.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/tests/: test.yml
ansible-nagios-plugins-deploy/deploy-nagios-checks/vars/: main.yml
icinga-custom-commands/: NAGIOS-PLUGINS-IMPORT.md  commands-custom.conf  commands-nagios-plugins-2.4.12.conf  commands-nagios-plugins-2.4.12.conf.dynamic-path
nagios-plugins-parser/: parse_nagios_plugins.py
selinux-policy/: icinga2_fix.te  semerge.py
